Fix: overlap issue with others styles, modifyng class names, and create: custom range input

--- a/src/components/fedmg/styles/main.css
+++ b/src/components/fedmg/styles/main.css
@@ -1,5 +1,6 @@
 @import 'https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap';
 @import './input-section.css';
+@import './input.css';
 @import './output-section.css';
 @import './control-section.css';
 @import './icon.css';
@@ -14,26 +15,29 @@
 	color: #fff;
 }
 
-.fedmg-main .section {
-	--height-custom: 20em;
+.fedmg-section {
+	--width-board: 35em;
+	--height-board: 20em;
+	--border-rad: 0.15em;
 
 	padding: clamp(0.3em, 2vw, 1.15em);
 	background: linear-gradient(to right, rgb(55 65 81), rgb(17 24 39), rgb(0 0 0));
-	max-width: 35em;
-	max-height: var(--height-custom);
+	max-width: var(--width-board);
+	max-height: var(--height-board);
 	width: 100%;
+
+	/* height: 100%; */
 	text-align: center;
-	border-radius: 0.33em;
+	border-radius: var(--border-rad);
 	box-shadow: 0.22px 0.22px 0.9px 0.357px #fff;
 }
 
-.fedmg-main .title {
+.fedmg-title {
 	font-size: clamp(1.15em, 3.5vw, 1.8em);
 	font-family: 'Noto sans', sans-serif;
 	margin: 0 0 0.9em;
 }
 
-/* form */
-.fedmg-main .form {
+.fedmg-form {
 	padding: clamp(0.05em, 2vw, 1.15em);
 }
